# host-lifecycle

./: .gitignore  .host-lintignore  Cargo.toml  MEMORY.md  README.md  host-lifecycle-dream.allium  host-lifecycle-dream.obligations  host-lifecycle-materialize.allium  host-lifecycle-materialize.obligations  host-lifecycle-refs.allium  host-lifecycle-refs.obligations  host-lifecycle.allium  host-lifecycle.obligations
.github/workflows/: ci.yml
skills/adopt/: SKILL.md
skills/classify/: SKILL.md
skills/embed/: SKILL.md
skills/publish/: SKILL.md
skills/remap/: SKILL.md
skills/upgrade/: SKILL.md
skills/verify/: SKILL.md
src/: bootstrap.rs  dream.rs  envhash.rs  main.rs  mcp.rs  memory.rs  refs.rs  setup.rs
tests/: exit_paths.rs
