[package]
name = "host-lifecycle"
version = "0.34.0"
edition = "2021"
description = "Token-free lifecycle tool for an agentic project — scaffolds milestones, decisions, and personas, and validates the tree."
license = "Unlicense"

[dependencies]
host-grammar = { git = "https://github.com/connollydavid/host-grammar", rev = "9470b81c9c851b0fedc872203437ea0de60b7f62" }
host-lint = { git = "https://github.com/connollydavid/host-lint", rev = "cefc9376ca20b6f0b8d11960f54661b43c1b0220" }

# Reproducible builds: strip symbols and the .comment section (which embed the build
# host's toolchain/distro). Combined with --build-id=none (.cargo/config.toml), the
# release binary carries no build-environment metadata, so it hashes the same anywhere.
[profile.release]
strip = true
