[package]
name = "host-lifecycle"
version = "0.37.0"
edition = "2021"
description = "Token-free lifecycle tool for an agentic project — scaffolds milestones, decisions, and personas, and validates the tree."
license = "Unlicense"

[dependencies]
host-grammar = { git = "https://github.com/connollydavid/host-grammar", rev = "9470b81c9c851b0fedc872203437ea0de60b7f62" }
host-lint = { git = "https://github.com/connollydavid/host-lint", rev = "78bd526fccfb845cf77331e5aa11e089dfd90b60" }

# Reproducible builds: strip symbols and the .comment section (which embed the build
# host's toolchain/distro). Combined with --build-id=none (.cargo/config.toml), the
# release binary carries no build-environment metadata, so it hashes the same anywhere.
[profile.release]
strip = true
